--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,19 +1,43 @@
 .card {
     margin-bottom: 20px; /* Add some margin between cards */
+    
+}
+
+.card-img-top{
+   height: 382px;
 }
 
 @media (max-width: 768px) {
     .card {
         margin: 0 auto; /* Center cards horizontally */
+        max-width: 18rem;
+        margin-bottom: 20px;
     }
-   
+
+    .title-center {
+        margin-top: -20px;
+      }
 }
 
 h1{
-    background-color: cadetblue;
     margin: 0 auto;
-    font-size: xx-large;
+    font-size:100%;
     text-align: center;
+    color: white;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    background-color: cadetblue;
+    color: white;
+}
+
+header img {
+    max-width: 100px; /* Adjust the max width of the logo as needed */
+    margin-right: 20px; /* Space between the logo and heading */
 }
 
 .filtrar{
@@ -23,3 +47,49 @@ h1{
 body{
     background-color: rgb(212, 212, 212);
 }
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    margin: 0px;
+    background-color: #110E3E;
+    color: white;
+  }
+  .title-center {
+    margin-top: -10px;
+    flex: 1 1 auto;
+    text-align: center;
+  }
+
+  .fab {
+    position: fixed;
+    bottom: 50px;
+    right: 20px;
+    background-color: rgb(20, 182, 20);
+    color: white;
+    border-radius: 5px;
+    width: 150px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border: none;
+}
+
+.fab:hover {
+    background-color: #187e0b;
+}
+
+.row{
+    margin-bottom: 30px;
+}
+
+.card-body{
+    height: 246px;
+}
+
