--- a/docs/styles.css
+++ b/docs/styles.css
@@ -5,7 +5,7 @@
 
 .card-img-top{
    height: 382px;
-   object-fit: cover;
+   object-fit:fill;
    width: 100%;
 }
 
@@ -25,6 +25,10 @@
     .title-center {
         margin-top: -20px;
       }
+
+      h1{
+        margin-right: 5px;
+    }
 }
 
 h1{
@@ -32,7 +36,6 @@ h1{
     font-size:100%;
     text-align: center;
     color: white;
-    margin-right: 5px;
 }
 
 header {
