--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,17 +1,19 @@
 .card {
-    margin-bottom: 20px; /* Add some margin between cards */
-    
+    margin-bottom: 20px;
+    height: 100%; 
 }
 
 .card-img-top{
    height: 382px;
    object-fit:fill;
    width: 100%;
+
 }
 
 .card img{
     max-height: 382px;
 }
+
 
 
 
@@ -103,5 +105,23 @@ footer {
 
 .card-body{
     height: 246px;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    filter: invert(100%);
+    background-color: rgba(0, 0, 0, 0.5); /* Adds a semi-transparent black background */
+    border-radius: 50%; /* Makes the indicator round */
+}
+
+.carousel-control-prev-icon:hover,
+.carousel-control-next-icon:hover {
+    filter: invert(70%); /* Adjust the color on hover */
+}
+
+.divImg{
+    height: 382px;
+    display: flex;
+    align-items: center;
 }
 
