--- a/docs/styles.css
+++ b/docs/styles.css
@@ -5,7 +5,7 @@
 
 .card-img-top{
    height: 382px;
-   object-fit:fill;
+   object-fit:contain;
    width: 100%;
 
 }
@@ -129,4 +129,52 @@ footer {
     max-height: 350px;
     max-width: 100%;
     object-fit: contain; /* or object-fit: cover; depending on the desired effect */
+}
+
+.example1 {
+    height: 50px;	
+    overflow: hidden;
+    position: relative;
+
+}
+.example1 h3 {
+    font-size: 3em;
+    color: limegreen;
+    position: absolute;
+    width: auto;
+    min-width: 100%; /* Ensure the text is wide enough */
+    white-space: nowrap; /* Prevent text from wrapping */
+    height: 100%;
+    margin: 0;
+    line-height: 50px;
+    text-align: center;
+    /* Starting position */
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);	
+    transform: translateX(100%);
+    /* Apply animation to this element */	
+    -moz-animation: example1 10s linear infinite;
+    -webkit-animation: example1 10s linear infinite;
+    animation: example1 10s linear infinite;
+}
+/* Move it (define the animation) */
+@-moz-keyframes example1 {
+    0%   { -moz-transform: translateX(100%); }
+    100% { -moz-transform: translateX(-100%); }
+}
+@-webkit-keyframes example1 {
+    0%   { -webkit-transform: translateX(100%); }
+    100% { -webkit-transform: translateX(-100%); }
+}
+@keyframes example1 {
+    0%   { 
+        -moz-transform: translateX(100%); /* Firefox bug fix */
+        -webkit-transform: translateX(100%); /* Firefox bug fix */
+        transform: translateX(100%); 		
+    }
+    100% { 
+        -moz-transform: translateX(-100%); /* Firefox bug fix */
+        -webkit-transform: translateX(-100%); /* Firefox bug fix */
+        transform: translateX(-100%); 
+    }
 }
